fixed right-scroll html whitespace

--- a/src/app/app-footer/app-footer.component.scss
+++ b/src/app/app-footer/app-footer.component.scss
@@ -75,7 +75,7 @@
   padding-top: .5rem;
   .mobile-foot-social {
     // display
-    justify-content: center;
+    justify-content: space-between;
     // box
     width: 100%;
     height: auto;
@@ -83,9 +83,6 @@
     color: $color-b;
     // text
     font-size: 2.4em;
-    .foot-icon {
-      margin: 0 2rem;
-    }
   }
   .mobile-foot-sponsors {
     // display
